Fix pagination UI on mobile view

--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -12,7 +12,15 @@
 
   font-size: 14px;
   color: rgb(84, 95, 125);
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
+
+  @include smMaxBreakPoint {
+    font-size: 12px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
 
   .selectPages {
     display: flex;
@@ -21,12 +29,22 @@
     width: 300px;
     // border: 1px solid red;
 
+    @include mdMaxBreakPoint {
+      width: 200px;
+      margin-right: 0;
+      white-space: nowrap;
+    }
+
     p {
       font-style: normal;
       font-weight: 400;
-      font-size: 14px;
+      // font-size: 14px;
       line-height: 16px;
       color: #545f7d;
+
+      @include smMaxBreakPoint {
+        font-size: 12px;
+      }
     }
 
     select {
@@ -106,12 +124,12 @@
   }
 
   .navigationButtons {
+    // border: 1px solid green;
     .previousButton {
       background: none;
       margin-left: 4px;
       cursor: pointer;
       // margin-right: 4px;
-      // border: 1px solid green;
 
       cursor: pointer;
     }
